# 22s-final-project-will-nahley

./: .gitignore  AVLTree.cpp  AVLTree.h  CMakeLists.txt  DSDoc.cpp  DSDoc.h  IndexHandler.cpp  IndexHandler.h  Parser.cpp  Parser.h  Term.cpp  Term.h  main.cpp
Catch_Tests/: AVL_tests.cpp
data_structures/: AVLTree.h  HashTable.cpp  HashTable.h
engine_architecture/: IndexHandler.cpp  IndexHandler.h  Parser.cpp  Parser.h  PersistenceIndex.txt  QueryProcessor.cpp  QueryProcessor.h  SearchEngine.cpp  SearchEngine.h
file_cleanup/: porter_stemmer.cpp
persistence_index/: OrgIndex.txt  PersonIndex.txt
